[Modify] Changed the data flow a little and utilisedf earlier added resources

--- a/index.css
+++ b/index.css
@@ -11,9 +11,9 @@
 
 .nav-half {
     width: 50%;
-    padding: 10px 100px;
+    padding: 0 100px;
     font: bold;
-    font-size: larger;
+    font-size: large;
 }
 
 
