--- a/index.css
+++ b/index.css
@@ -2,6 +2,12 @@
     --main-bg-color: #12304d;
     --sub-bg-color: #f7f7f7;
     --btn-bg-color: #0051a1;
+
+    --top-header-height: 65px
+}
+
+body {
+    overflow: hidden;
 }
 
 .navbar {
@@ -11,15 +17,20 @@
     width: 100%;
     left: 0;
     top: 0;
-    height: 65px;
+    height: var(--top-header-height);
     background-color: var(--main-bg-color);
     color: white;
     font-size: large;
+    margin: 0;
+    padding: auto;
 }
 
-.nav-half {
-    width: 50%;
-    padding: 0 100px;
+#balloonBoard {
+    position: absolute;
+    left: 0;
+    top: var(--top-header-height);
+    width: 100%;
+    height: calc(100% - var(--top-header-height));
 }
 
 .balloon {
