--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 :root {
-    --main-bg-color: #12304d;
+    /* --main-bg-color: #12304d; */
+    --main-bg-color: black;
     --sub-bg-color: #f7f7f7;
     --btn-bg-color: #0051a1;
 
@@ -23,6 +24,25 @@ body {
     font-size: large;
     margin: 0;
     padding: auto;
+}
+
+.nav-banner {
+    margin: auto;
+    /* -webkit-text-stroke-width: 1px; */
+    /* -webkit-text-stroke-color: white; */
+    animation: color-change-infinite 10s infinite;
+}
+
+@keyframes color-change-infinite {
+    0% { 
+        color: aqua;
+    }
+    50% {
+        color: rgb(255, 0, 255);
+    }
+    100% { 
+        color: aqua;
+    }
 }
 
 #balloonBoard {
@@ -55,6 +75,10 @@ body {
     }
 }
 
+.modal-content {
+    border: 1px solid white;
+}
+
 .modal-header {
     background-color: var(--main-bg-color);
     color: white;
@@ -66,6 +90,10 @@ body {
 
 .modal-body {
     background: var(--sub-bg-color);
+}
+
+.modal-footer {
+    padding: 0.5rem;
 }
 
 .blue-button {
@@ -81,4 +109,19 @@ body {
 
 .btn {
     border: none;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 35px;
+    background-color: rgb(231, 251, 251);
+    margin: 0 !important;
+    padding: 5px;
+}
+
+.recede-margin {
+    margin-left: -50%;
 }
