[Modify] Adding first visit cookies and messages

--- a/index.css
+++ b/index.css
@@ -120,8 +120,9 @@ footer {
     background-color: rgb(231, 251, 251);
     margin: 0 !important;
     padding: 5px;
+    text-decoration: underline;
 }
 
-.recede-margin {
+.recede-text-margin {
     margin-left: -50%;
 }
